--- a/assets/css/me.css
+++ b/assets/css/me.css
@@ -101,8 +101,8 @@ body.page-template-page-fullsingle-me {
   font-size: 45px;
   line-height: 60px;
   letter-spacing: -0.5px;
-  color: #999999;
-  color: #fff;
+  color: #b6c719;
+  color: rgb(123, 33, 141);
   background-image: url("../../images/Plakat.png");
   background-position: center center;
   background-size: cover; }
